<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.demo.wyd.framedemo.activity.MainActivity">

    <Button
        android:id="@+id/btn_gain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="获取福利"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_welfare"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_gain"
        tools:layout_height="wrap_content"
        tools:layout_width="wrap_content" />

    <Button
        android:id="@+id/btn_push"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="测试上下拉"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
